--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -739,10 +739,13 @@ pluto-output:not(.rich_output) > div > pre {
 pluto-cell.popped_out {
     z-index: 10;
     position: fixed;
-    bottom: 17px;
-    left: 25px;
+    bottom: 13px;
+    left: 21px;
     width: 30vw;
     max-width: 700px;
+    border: 4px solid #f4f2ff;
+    border-radius: 4px;
+    background: #f4f2ff;
 }
 
 /* SELECTION */
@@ -885,6 +888,8 @@ pluto-shoulder > button {
 }
 pluto-cell.popped_out pluto-shoulder > button {
     position: absolute;
+    bottom: 0px;
+    top: auto;
 }
 
 pluto-cell:focus-within > pluto-shoulder > button {
