--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -1183,6 +1183,7 @@ body.nbpkg_disabled pkg-popup {
 
 pkg-status-mark {
     width: 1em;
+    height: 1em;
     margin: 0px 0.3em;
     display: inline-block;
 }
