--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -616,16 +616,18 @@ li.dir.CodeMirror-hint:before {
     }
 }
 
-body.loading > header {
-    background-color: hsla(290, 10%, 59%, 0.14);
-}
-
 body.disconnected > header {
-    background-color: rgba(255, 169, 114, 0.56);
     position: sticky;
     top: 0;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
+}
+
+body.loading > header {
+    background-color: hsla(290, 10%, 59%, 0.14);
+}
+body.disconnected > header {
+    background-color: rgba(255, 169, 114, 0.56);
 }
 
 #process_status {
