🩹 Detect broken process and offer to restart (#948)

--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -462,9 +462,6 @@ aside#export button.toggle_export {
     margin-left: auto;
     height: 60px;
 }
-body.loading button.toggle_export {
-    display: none;
-}
 
 nav#at_the_top h1 {
     color: black;
@@ -623,6 +620,7 @@ li.dir.CodeMirror-hint:before {
     }
 }
 
+body.process_dead > header,
 body.disconnected > header {
     position: sticky;
     top: 0;
@@ -630,6 +628,9 @@ body.disconnected > header {
     -webkit-backdrop-filter: blur(10px);
 }
 
+body.process_dead > header {
+    background-color: rgb(230 88 46 / 38%);
+}
 body.loading > header {
     background-color: hsla(290, 10%, 59%, 0.14);
 }
@@ -637,7 +638,7 @@ body.disconnected > header {
     background-color: rgba(255, 169, 114, 0.56);
 }
 
-#process_status {
+nav#at_the_top > #process_status {
     font-size: 1rem;
     font-weight: 500;
     padding: 5px 10px;
@@ -645,9 +646,10 @@ body.disconnected > header {
     background: white;
     border-radius: 10px;
     z-index: 1;
+    margin-left: 1em;
 }
 
-#process_status:empty {
+nav#at_the_top > #process_status:empty {
     display: none;
 }
 
