--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -811,7 +811,7 @@ pluto-input .CodeMirror-empty {
     color: rgba(0, 0, 0, 0.15);
 }
 
-pluto-cell.code_folded:not(.show_input) > pluto-input {
+pluto-cell:not(.show_input) > pluto-input {
     display: none;
 }
 
@@ -1205,12 +1205,8 @@ pluto-cell.queued > pluto-runarea > button.runcell > span::after {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/stop-circle-outline.svg);
 }
 
-pluto-cell.code_folded > pluto-runarea {
+pluto-cell:not(.show_input) > pluto-runarea {
     display: none;
-}
-
-pluto-cell.code_differs > pluto-runarea {
-    display: block;
 }
 
 pluto-cell:focus-within > pluto-runarea,
