Remove statistics feature

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -22,8 +22,7 @@
     text-align: center;
 }
 
-body.error #title,
-body.statistics #title {
+body.error #title {
     margin-top: 10vh;
     /* text-align: left; */
 }
@@ -68,8 +67,7 @@ main {
     color: hsl(0, 0%, 60%);
 }
 
-body.error main,
-body.statistics main {
+body.error main {
     width: unset;
     max-width: 40em;
     padding: 0.5em;
