--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -1582,6 +1582,7 @@ pluto-log-dot-positioner {
     display: block;
 }
 pluto-log-dot {
+    box-shadow: -2px 0px 1px #00000014;
     font-family: "Roboto Mono", monospace;
     font-size: 0.6rem;
 
