--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -1295,6 +1295,10 @@ pluto-cell.queued > pluto-runarea > button.runcell > span::after {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/stop-circle-outline.svg);
 }
 
+pluto-cell.has_execution_barrier > pluto-runarea > button.runcell > span::after {
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/pause-circle-outline.svg);
+}
+
 pluto-cell:not(.show_input) > pluto-runarea {
     display: none;
 }
