lazy_workspace_creation

--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -356,6 +356,10 @@ pluto-output table > tbody td {
     font-size: 0.75rem;
     font-variant-ligatures: none;
 }
+pluto-output table > tbody td code {
+    font-size: 0.75rem;
+}
+
 
 pluto-output table td,
 pluto-output table th {
