--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -916,8 +916,6 @@ pluto-cell:hover > pluto-output > div::-webkit-scrollbar-thumb {
 /* CELL INPUT */
 
 pluto-input .CodeMirror {
-    height: auto !important;
-    width: auto;
     z-index: 20;
     border-bottom-right-radius: 4px;
     border: 1px solid rgba(0, 0, 0, 0.1);
@@ -925,12 +923,8 @@ pluto-input .CodeMirror {
     transition: border 0.15s ease-in-out;
 }
 
-pluto-input .CodeMirror-scroll {
-    min-height: 0px;
-}
-
-pluto-input .CodeMirror-empty {
-    color: rgba(0, 0, 0, 0.15);
+pluto-input {
+    contain: strict;
 }
 
 pluto-cell:not(.show_input) > pluto-input {
