--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -1367,11 +1367,10 @@ ul.input_menu {
     background-color:rgba(0, 0, 0, 0.1)
 }
 
-.barrier_icon,
+.disable_cell_icon,
 .delete_icon, 
-.download_icon,
-.ccopy_icon,
-.run_icon,
+.enable_cell_icon,
+.bandage_icon,
 .icon {
     --size: 17px;
     width:  var(--size);
@@ -1381,12 +1380,12 @@ ul.input_menu {
     background-position: center;
     margin-right: calc(var(--size) / 3);
 }
-.bandage {
+.bandage_icon {
     filter: opacity(0.3);
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/bandage-outline.svg);
 }
-.run_icon {
-    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/play-outline.svg);
+.enable_cell_icon {
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/caret-forward-circle-outline.svg);
 }
 
 pluto-cell.is_disabled > pluto-runarea > button.runcell {
@@ -1398,14 +1397,8 @@ pluto-cell.is_disabled > pluto-runarea > button.runcell > span::after {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/remove-circle-outline.svg);
 }
 
-.ccopy_icon {
-    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/copy-outline.svg);
-}
-.download_icon {
-    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/cloud-download-outline.svg);
-}
-.barrier_icon {
-    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/stop-circle-outline.svg);
+.disable_cell_icon {
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/ban-outline.svg);
 }
 .delete_icon {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/close-circle-outline.svg);
